--- a/SCRIPTS/exercice_python.ipynb
+++ b/SCRIPTS/exercice_python.ipynb
@@ -746,6 +746,65 @@
     "data.tail() \n",
     "# fonction pour voir les 5 dernières lignes du dataset"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdf9bebf",
+   "metadata": {},
+   "source": [
+    "# Financial specific\n",
+    "yfinance, pypfopt, empyrical, riskk-it\n",
+    "pandas, numpy, scipy \n",
+    "scikit-learn, tensorflow, prophet, arch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ef22b236",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 Télécharger les données depuis 2020\n",
+    "ticker = \"AAPL\"\n",
+    "data = yf.download(ticker, start=\"2020-01-01\", auto_adjust=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "4d80f606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Calculer les rendements journaliers (Daily Returns)\n",
+    "# On utilise dele 'Adj Close' (Prix ajusté au dividende/splits)\n",
+    "data['Returns']=data['Adj Close'].pct_change()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e09a9930",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 Calculer la volatilité et le rendement moyen (Annualisés)\n",
+    "# il y a environ 252 jours de trading par an\n",
+    "mean_return_daily = data['Returns'].mean()\n",
+    "volatility_daily = data['Returns'].std()\n",
+    "\n",
+    "annualized_return = mean_return_daily * 252\n",
+    "annualized_volatility = volatility_daily * np.sqrt(252)"
+   ]
   }
  ],
  "metadata": {
