--- a/SCRIPTS/exercice_python.ipynb
+++ b/SCRIPTS/exercice_python.ipynb
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "e09a9930",
    "metadata": {},
    "outputs": [],
@@ -804,6 +804,35 @@
     "\n",
     "annualized_return = mean_return_daily * 252\n",
     "annualized_volatility = volatility_daily * np.sqrt(252)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "1ea7de42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Analyse pour (ticker) AAPL---\n",
+      "Rendement annuel : 26.06%\n",
+      "Volatilité annuelle : 31.69%\n",
+      "Ratio de Sharpe : 0.82\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4 Calcul du Ratio de Sharpe (Supposons taux sans risque = 0)\n",
+    "sharpe_ratio = annualized_return / annualized_volatility\n",
+    "\n",
+    "print(f\"---Analyse pour (ticker) {ticker}---\")\n",
+    "print(f\"Rendement annuel : {annualized_return:.2%}\")\n",
+    "print(f\"Volatilité annuelle : {annualized_volatility:.2%}\")\n",
+    "print(f\"Ratio de Sharpe : {sharpe_ratio:.2f}\")\n",
+    "\n",
+    "# interprétation simple : un sharpe > 1 est considéré comme bon"
    ]
   }
  ],
